tests/fixtures/fail/layout_intrinsic_global_operation.sc
let IS_I32: bool = size_of(i32) == 4

let main(): i32 = { 0 }
